// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputTextFieldBase /> with error should match snapshot 1`] = `
<div
  data-testid="test-number-field-old-id-wrapper"
  id="test-number-field-old-id-wrapper"
>
  <label
    className="default"
    data-testid="test-number-field-old-id-label"
    htmlFor="test-number-field-old-id"
    id="test-number-field-old-id-label"
  >
    test number field input-field-label
  </label>
  <input
    className="default size-md error"
    data-testid="test-number-field-old-id"
    id="test-number-field-old-id"
    maxLength={10}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[MockFunction]}
    onInput={[Function]}
    placeholder="test placeholder"
    type="text"
    value=""
  />
  <span
    className="default error"
    data-testid="test-number-field-old-id-caption"
    id="test-number-field-old-id-caption"
  >
    test caption
  </span>
</div>
`;

exports[`<InputTextFieldBase /> with initial value and caption should match snapshot 1`] = `
<div
  data-testid="test-number-field-old-id-wrapper"
  id="test-number-field-old-id-wrapper"
>
  <label
    className="default"
    data-testid="test-number-field-old-id-label"
    htmlFor="test-number-field-old-id"
    id="test-number-field-old-id-label"
  >
    test number field input-field-label
  </label>
  <input
    className="default size-md filled"
    data-testid="test-number-field-old-id"
    id="test-number-field-old-id"
    maxLength={10}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[MockFunction]}
    onInput={[Function]}
    placeholder="test placeholder"
    type="text"
    value="initial value"
  />
  <span
    className="default"
    data-testid="test-number-field-old-id-caption"
    id="test-number-field-old-id-caption"
  >
    test caption
  </span>
</div>
`;

exports[`<InputTextFieldBase /> without initial value or caption should match snapshot 1`] = `
<div
  data-testid="test-number-field-old-id-wrapper"
  id="test-number-field-old-id-wrapper"
>
  <label
    className="default"
    data-testid="test-number-field-old-id-label"
    htmlFor="test-number-field-old-id"
    id="test-number-field-old-id-label"
  >
    test number field input-field-label
  </label>
  <input
    className="default size-md"
    data-testid="test-number-field-old-id"
    id="test-number-field-old-id"
    maxLength={10}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[MockFunction]}
    onInput={[Function]}
    placeholder="test placeholder"
    type="text"
    value=""
  />
</div>
`;
